# ferroly

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSING.md  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_report.yml  feature_request.yml  question.yml
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  tag-on-merge.yml  version-guard.yml
crates/ferroly/: Cargo.toml  README.md
crates/ferroly-derive/: Cargo.toml  README.md
crates/ferroly-derive/src/: attrs.rs  case.rs  de.rs  error.rs  lib.rs  ser.rs
crates/ferroly/examples/: codec_roundtrip.rs  model_router.rs
crates/ferroly/src/: config.rs  errutils.rs  fsutils.rs  lib.rs  log.rs
crates/ferroly/src/auth/: mod.rs  sha256.rs
crates/ferroly/src/cli/: mod.rs
crates/ferroly/src/clients/: auth.rs  breaker.rs  error.rs  mod.rs  retry.rs
crates/ferroly/src/codec/: error.rs  fmt.rs  json.rs  mod.rs  registry.rs  schema.rs  toml.rs  traits.rs  value.rs  xml.rs  yaml.rs
crates/ferroly/src/genai/: embedder.rs  error.rs  message.rs  mod.rs  options.rs  prompt.rs  provider.rs  request.rs  response.rs  template.rs
crates/ferroly/src/genai/providers/: claude.rs  mod.rs  ollama.rs  openai.rs  sse.rs  util.rs
crates/ferroly/src/genai/router/: capability.rs  config.rs  default_router.rs  embedding_router.rs  error.rs  execute.rs  mod.rs  observe.rs  provider_set.rs  registry.rs  route.rs  strategy.rs  strategy_capability.rs  strategy_composite.rs  task.rs
crates/ferroly/src/hash/: mod.rs
crates/ferroly/src/http/: client.rs  core.rs  download.rs  error.rs  io.rs  message.rs  mod.rs  pool.rs  server.rs  sse.rs  transport.rs
crates/ferroly/src/http/testdata/: self_signed_cert.pem  self_signed_key.pem
crates/ferroly/src/lifecycle/: component.rs  error.rs  health.rs  manager.rs  mod.rs  state.rs
crates/ferroly/src/messaging/: mod.rs
crates/ferroly/src/metrics/: mod.rs
crates/ferroly/src/obs/: mod.rs  otlp.rs
crates/ferroly/src/rest/: error.rs  mod.rs
crates/ferroly/src/rest/client/: mod.rs  request.rs  response.rs
crates/ferroly/src/rest/server/: mod.rs
crates/ferroly/src/rt/: mod.rs
crates/ferroly/src/turbo/: error.rs  mod.rs
crates/ferroly/src/vectorstore/: mod.rs
crates/ferroly/src/vfs/: mod.rs
crates/ferroly/src/ws/: client.rs  conn.rs  error.rs  frame.rs  handshake.rs  message.rs  mod.rs  options.rs  rand.rs  server.rs
crates/ferroly/tests/: clients_auth.rs  codec_fuzz.rs  codec_integration.rs  codec_types.rs  genai_http.rs  genai_integration.rs  genai_router.rs  genai_types.rs  http_download.rs  http_integration.rs  http_server_hardening.rs  lifecycle_integration.rs  messaging_integration.rs  rest_integration.rs  turbo_integration.rs  ws_integration.rs
docs/: README.md  auth.md  cli.md  clients.md  codec.md  config.md  derive.md  errutils.md  fsutils.md  genai.md  getting-started.md  hash.md  http.md  lifecycle.md  log.md  messaging.md  metrics.md  model-router.md  obs.md  rest.md  rt.md  schema.md  turbo.md  vectorstore.md  vfs.md  ws.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: json_parse.rs  xml_parse.rs  yaml_parse.rs
