[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nandlabs/ferroly"
authors = ["nandlabs"]

[workspace.dependencies]
# Runtime dependency budget: tokio + (for TLS) tokio-rustls/rustls only.
tokio = { version = "1", features = ["full"] }

# TLS engine (single crypto exception, isolated behind an internal transport trait)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "1"

# build-time only — for our own derive macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# internal proc-macro crate — the only companion crate to `ferroly`
ferroly-derive    = { path = "crates/ferroly-derive",    version = "0.3.1" }

[profile.release]
lto = "thin"
codegen-units = 1

# Centralized lints applied to every workspace crate. The codebase is
# `unsafe`-free except for a single audited region: the read-only memory-mapped
# file support in `fsutils` (a `#[allow(unsafe_code)]` module wrapping the
# `mmap`/`munmap` FFI). `deny` keeps every other `unsafe` a hard error while
# permitting that one reviewed exception.
[workspace.lints.rust]
unsafe_code = "deny"
