[package]
name = "ferroly-derive"
description = "Derive macros for the Ferroly toolkit (Encode, Decode, FerrolyError)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["derive", "macro", "encode", "error"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
